question adding page added

--- a/frontend/exam/index.html
+++ b/frontend/exam/index.html
@@ -10,9 +10,9 @@
     <div id="header">Cyber Security</div>
     <div id="time-section">Time left: <span id="timer">30:00</span></div>
     <div id="main-section">
-      <div id="problem-section">
+      <form id="problem-section" >
         
-      </div>
+      </form>
       
       <div id="navigator">
         <div id="personal-info">
